--- a/recette.css
+++ b/recette.css
@@ -24,9 +24,8 @@ p.categorie
 div.contenu
 {
     background-color: white;
-    margin:60px 10% 80px 10%;
-    padding: 0px 30px 30px 30px;
-    min-width: 350px;
+    margin:40px 8px 40px 8px;
+    padding: 0px 8px 20px 8px;
     box-shadow: 0px 0px 8px 8px rgba(0,0,0,0.1);
     overflow: visible;
 }
@@ -71,7 +70,7 @@ table.info
     position: absolute;
     bottom: 0; 
     width: 100%; 
-    height: 80px; 
+    height: 50px; 
     color: white; 
     background-color: #6C829DC0;
 }
@@ -79,7 +78,7 @@ table.info
 table.info td
 {
     text-align: center;
-    font-size: 14px;
+    font-size: 12px;
     vertical-align: top;
 
 }
@@ -87,7 +86,7 @@ table.info td
 table.info th
 {
     text-align: center;
-    font-size: 16px;
+    font-size: 14px;
 }
 
 h1
@@ -108,7 +107,7 @@ img.info
 
 div.colonne
 {
-    width: 45%;
+    width: 100%;
     margin-top: 20px;
 }
 
@@ -118,14 +117,12 @@ div.colonne h2
     text-transform: uppercase;
     font-size: 15px;
     border-bottom: 5px solid #6c829d;
-    padding-bottom: 5px;
-    
+    padding-bottom: 5px;    
 }
 
 div.colonne1
 {
     display: inline-block;
-    margin-right: 10%;
 }
 
 div.colonne2
@@ -141,7 +138,6 @@ div.ingredient p
     padding:8px 0px;
     margin-top: 4px;
     margin-bottom: 0px;
-
 }
 
 table.preparation p.numero
@@ -176,3 +172,55 @@ table.preparation td.preparation_etape
     padding-bottom: 10px;
 }
 
+/* Style pour ordinateur*/
+@media only screen and (min-width: 768px)
+{
+    div.contenu
+    {
+        min-width: 350px;
+        margin:60px 10% 80px 10%;
+        padding: 0px 30px 30px 30px;
+    }
+
+    table.info
+    {
+        height: 80px; 
+    }
+    
+    table.info td
+    {
+        font-size: 14px;
+    }
+    
+    table.info th
+    {
+        font-size: 16px;
+    }    
+    
+    div.colonne
+    {
+        width: 45%;
+    }
+    
+    div.colonne1
+    {
+        margin-right: 10%;
+    }
+    
+    div.colonne2
+    {
+        float: right;
+    }    
+}
+
+@media only screen and (min-width: 900px)
+{
+    div.contenu
+    {
+        margin-left: auto;
+        margin-right: auto;
+        width: 645px;
+    }
+    
+
+}
